--- a/ComputerShop/LoginScreen.xaml
+++ b/ComputerShop/LoginScreen.xaml
@@ -1,16 +1,18 @@
 ﻿<Window x:Class="ComputerShop.LoginScreen"
+        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ComputerShop"
         mc:Ignorable="d" Height="383" Width="379" Title="Computer Shop" WindowStyle="ThreeDBorderWindow" ShowInTaskbar="False" Background="#FFB440">
+   
     <Border Background="#BF8730" CornerRadius="20" Margin="20">
         <StackPanel>
             <Label Content="Login" Foreground="#FFB440" HorizontalAlignment="Center" FontSize="25" />
-            <Separator></Separator>
             <Label Content="Username" Foreground="Wheat" Width="321" FontSize="18" />
-            <TextBox  Name="Username" Background="#FFC873" Foreground="Black" FontSize="16" Width="318" Height="39"/>
+            <Separator></Separator>
+            <TextBox  x:Name="Username" Background="#FFC873" Foreground="Black" FontSize="16" Width="318" Height="39"/>
             <Label Content="Password" Foreground="Wheat" Width="321" FontSize="18" />
             <PasswordBox  x:Name="Password" Background="#FFC873" Foreground="Black" FontSize="16" Width="318" Height="39"/>
             <Button Name="btnSubmit" Click = "btnSubmit_Click" Background="#FFC873" Foreground="Black" FontSize="16" Content="Submit" Margin="60 10"></Button>
