--- a/ComputerShop/Manager_window.xaml
+++ b/ComputerShop/Manager_window.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Loaded="WinLoad"
         
-        Title="Manager_window" Height="450" Width="800">
-    <Grid>
+        Title="Manager_window" Height="497" Width="823">
+    <Grid Background="#FF415AAB">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="571*"/>
             <ColumnDefinition Width="229*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid Margin="0,0,32,239" x:Name="ProductGrid"  AutoGenerateColumns="False"  AlternatingRowBackground="#FFC4B0B0" SelectionMode="Single">
+        <DataGrid Background="#FF95B6D0" Margin="0,48,222,285" x:Name="ProductGrid"  AutoGenerateColumns="False"  AlternatingRowBackground="#FFC4B0B0" SelectionMode="Single" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding name_product}" Width="*" Header="Name product"/>
                 <DataGridTextColumn Binding="{Binding price}" Width="*" Header="Price"/>
@@ -21,20 +21,25 @@
                 <DataGridTextColumn Binding="{Binding manufacturer}" Width="*" Header="Manufacturer"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid  Margin="0,200,221,49" AutoGenerateColumns="False" x:Name="Order" SelectionMode="Single" Grid.ColumnSpan="2">
+        <DataGrid Background="#FF95B6D0" Margin="0,273,222,44" AutoGenerateColumns="False" x:Name="Order" SelectionMode="Single" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding id_user}" Width="*" Header="ID пользователя"/>
                 <DataGridTextColumn Binding="{Binding id_order}" Width="*" Header="Id заказа"/>
                 <DataGridTextColumn Binding="{Binding name_product}" Width="*" Header="Наименование товара"/>
+                <DataGridTextColumn Binding="{Binding email}" Width="*" Header="Почта"/>
                 <DataGridTextColumn Binding="{Binding status}" Width="*" Header="Статус"/>
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Content="Добавить товар"  Click="btn_AddProd" HorizontalAlignment="Left" Margin="37,115,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <ComboBox DisplayMemberPath="name_category" x:Name="CategoryProd" HorizontalAlignment="Left" Height="21" Margin="547,82,0,0" VerticalAlignment="Top" Width="196" Grid.ColumnSpan="2" />
-        <Button Content="Удалить товар" Click="btnDel_Click" HorizontalAlignment="Left" Margin="37,48,0,0" VerticalAlignment="Top" Width="117" Grid.Column="1"/>
-        <ComboBox Grid.Column="1" x:Name="Status" HorizontalAlignment="Left" Margin="65,248,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Grid.Column="1" Click="btnChangeStatus_Click" Content="Изменить статус" HorizontalAlignment="Left" Margin="78,293,0,0" VerticalAlignment="Top"/>
+        <Button Content="Добавить товар"  Click="btn_AddProd" HorizontalAlignment="Left" Margin="57,122,0,0" VerticalAlignment="Top" Grid.Column="1" Height="26" Width="113"/>
+        <ComboBox DisplayMemberPath="name_category" x:Name="CategoryProd" HorizontalAlignment="Left" Height="21" Margin="46,80,0,0" VerticalAlignment="Top" Width="135" Grid.Column="1" />
+        <Button Content="Удалить товар" Click="btnDel_Click" HorizontalAlignment="Left" Margin="55,169,0,0" VerticalAlignment="Top" Width="118" Grid.Column="1" Height="27"/>
+        <ComboBox Grid.Column="1" x:Name="Status" HorizontalAlignment="Left" Margin="57,293,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Grid.Column="1" Click="btnChangeStatus_Click" Content="Изменить статус" HorizontalAlignment="Left" Margin="57,330,0,0" VerticalAlignment="Top" Height="30" Width="118"/>
+        <Label Grid.Column="1" Content="Выберите статус" HorizontalAlignment="Center" Margin="0,259,0,0" VerticalAlignment="Top" FontSize="14" Foreground="White"/>
+        <Label Grid.Column="1" Content="Выберите категорию товара" HorizontalAlignment="Center" Margin="0,46,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <GroupBox Header="Товар" Grid.ColumnSpan="2" Margin="0,10,21,257" Foreground="White" FontSize="14"/>
+        <GroupBox Header="Заказы" Grid.ColumnSpan="2" Margin="0,233,21,21" Foreground="White" FontSize="14"/>
 
     </Grid>
 </Window>
