--- a/ComputerShop/Window_category/Power_Pack_window.xaml
+++ b/ComputerShop/Window_category/Power_Pack_window.xaml
@@ -7,27 +7,28 @@
         mc:Ignorable="d"
         Unloaded="Window_Unloaded"
         Title="Power_Pack_window" Height="450" Width="800">
-    <Grid>
-        <TextBox HorizontalAlignment="Left" x:Name="Name" Margin="250,79,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="Price" Margin="250,129,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="Country" Margin="250,180,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="Manufactured" Margin="250,230,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="Frequency" Margin="516,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="Size" Margin="513,88,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="TypeMemory" Margin="510,143,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="TechnicalProcess" Margin="513,212,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" x:Name="TDP" Margin="516,271,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Margin="250,55,0,0" TextWrapping="Wrap" Text="Наименвание" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="250,108,0,0" TextWrapping="Wrap" Text="Цена" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="250,159,0,0" TextWrapping="Wrap" Text="Страна" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="250,214,0,0" TextWrapping="Wrap" Text="Производитель" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="513,29,0,0" TextWrapping="Wrap" Text="Форм фактор" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="513,68,0,0" TextWrapping="Wrap" Text="Основной разъем питания" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="545,122,0,0" TextWrapping="Wrap" Text="Вес" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="545,180,0,0" TextWrapping="Wrap" Text="Сертификат 80 Plus" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="573,250,0,0" TextWrapping="Wrap" Text="Мощность по линии 12В" VerticalAlignment="Top"/>
- 
-        <Button Content="Добавить товар" Click="btnAdd_Click" HorizontalAlignment="Left" Margin="293,310,0,0" VerticalAlignment="Top"/>
+    <Grid Background="#FF415AAB">
+        <TextBox HorizontalAlignment="Left" x:Name="Name" Margin="146,64,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="30"/>
+        <TextBox HorizontalAlignment="Left" x:Name="Price" Margin="146,124,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBox HorizontalAlignment="Left" x:Name="Country" Margin="146,193,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBox HorizontalAlignment="Left" x:Name="Manufactured" Margin="146,256,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="30"/>
+        <TextBox HorizontalAlignment="Left" x:Name="Frequency" Margin="381,65,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBox HorizontalAlignment="Left" x:Name="Size" Margin="381,124,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBox HorizontalAlignment="Left" x:Name="TypeMemory" Margin="381,193,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBox HorizontalAlignment="Left" x:Name="TechnicalProcess" Margin="377,257,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBox HorizontalAlignment="Left" x:Name="TDP" Margin="632,65,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="134" Height="29"/>
+        <TextBlock HorizontalAlignment="Left" Margin="146,45,0,0" TextWrapping="Wrap" Text="Наименвание" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="146,109,0,0" TextWrapping="Wrap" Text="Цена" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="146,174,0,0" TextWrapping="Wrap" Text="Страна" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="146,235,0,0" TextWrapping="Wrap" Text="Производитель" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="381,46,0,0" TextWrapping="Wrap" Text="Форм фактор" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="381,105,0,0" TextWrapping="Wrap" Text="Основной разъем питания" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="381,174,0,0" TextWrapping="Wrap" Text="Вес" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="377,238,0,0" TextWrapping="Wrap" Text="Сертификат 80 Plus" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="632,49,0,0" TextWrapping="Wrap" Text="Мощность по линии 12В" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
+
+        <Button Content="Добавить товар" Click="btnAdd_Click" HorizontalAlignment="Left" Margin="375,315,0,0" VerticalAlignment="Top" Height="36" Width="146"/>
+        <Image Source="C:\Users\Uset\Documents\GitHub\ComputerShop\ComputerShop\Source\блокПитания.png" HorizontalAlignment="Left" Height="100" Margin="24,28,0,0" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
 </Window>
